Refactor tests to use parameterized inputs and improve readability
- Updated InlayHintProviderTest to use ParameterizedTest for isInRange and other methods.
- Refactored capitalize tests in RenameProviderTest to use CsvSource for various input cases.
- Enhanced TypeDefinitionProviderTest to normalize type names using parameterized tests.
- Simplified UnusedDeclarationDetectorTest by replacing multiple test methods with parameterized tests for test method recognition.
- Improved performance tests in GroovyLsStressTest by adding a pause method for better readability.
- Cleaned up unnecessary imports and assertions across various test files.
- Ensured all Java files in sample project end with a newline for consistency.